tests/derive-tests/try_into/fail/union.err.txt
error: expected `enum`
 --> /tests/derive-tests/try_into/fail/union.rs:4:5
  |
4 | pub union Union {
  |     ^^^^^
error: could not compile `<CRATE>` (bin "<BIN>") due to 1 previous error
